--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sempico/sempico-php",
+    "name": "sempico/restapi-sms-php",
     "description": "Api library to interact with Sempico Solutions REST Api",
     "type": "library",
     "version": "1.0.0",
