--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Api library to interact with Sempico Solutions REST Api",
     "type": "library",
     "version": "1.0.0",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "license": "MIT",
     "require": {
         "curl/curl": "^2.3"
